# NovaDrone-Firmware

./: .gitignore  README.md
ESC/: CMakeLists.txt  build.sh
ESC/CMake/: Toolchain.cmake
ESC/CMake/MCU/: STM32G473xx.cmake
ESC/DebugTools/: checkProgrammer.sh  flash.sh
ESC/Firmware/: CMakeLists.txt
ESC/Firmware/App/: CMakeLists.txt
ESC/Firmware/App/Source/: main.c
ESC/Firmware/Board/: CMakeLists.txt
ESC/Firmware/Board/Include/BSystem/: clock_config.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
ESC/Firmware/Board/Include/Common/: bsp_utils.h
ESC/Firmware/Board/Include/Peripherals/: adc.h  dma.h  fdcan.h  gpio.h  tim.h  usart.h
ESC/Firmware/Board/Source/BSystem/: clock_config.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
ESC/Firmware/Board/Source/Common/: bsp_utils.c
ESC/Firmware/Board/Source/Peripherals/: adc.c  dma.c  fdcan.c  gpio.c  tim.c  usart.c
ESC/Firmware/Config/: CMakeLists.txt
ESC/Firmware/Control/: CMakeLists.txt
ESC/Firmware/Control/API/: control.h  control_six_step.h
ESC/Firmware/Control/Dispatcher/: command_handler_debug.c
ESC/Firmware/Control/Scenarios/: closed_loop.c  conrol_logic.c  control_six_step.c  six_step copy.c  six_step.c
ESC/Firmware/Control/System/: control_system.c
ESC/Firmware/Drivers/: CMakeLists.txt
ESC/Firmware/Drivers/Actuators/Invertor/: driver_invertor.c
ESC/Firmware/Drivers/Actuators/Led/: driver_led.c
ESC/Firmware/Drivers/Communication/CAN/: driver_can.c  driver_can.h
ESC/Firmware/Drivers/Communication/UART/: driver_uart.c  driver_uart.h
ESC/Firmware/Drivers/DSystem/: drivers_system.c
ESC/Firmware/Drivers/Miscellaneous/: driver_fastloop.c  driver_lowloop.c  driver_time.c  driver_time_oneshot.c  timers_callbacks.c  timers_callbacks.h
ESC/Firmware/Drivers/Sensors/: sensors_callbacks.c  sensors_callbacks.h
ESC/Firmware/Drivers/Sensors/Motor/: motor_sensors.c
ESC/Firmware/Drivers/Sensors/Temperature/: mcu_temperature.c  pcb_temperature.c  temperature_sensor_manager.c
ESC/Firmware/Drivers/Sensors/Voltage/: voltage_12v.c  voltage_3v3.c  voltage_bus.c  voltage_sensor_manager.c
ESC/Firmware/Interfaces/: CMakeLists.txt
ESC/Firmware/Interfaces/Actuators/: i_inverter.h  i_led.h
ESC/Firmware/Interfaces/ISystem/: i_system.h
ESC/Firmware/Interfaces/Protocol/: i_frame_handler.h  i_protocol.h
ESC/Firmware/Interfaces/Sensors/: i_backemf_sensor.h  i_current_sensor.h  i_motor_sensor.h  i_temperature_sensor.h  i_voltage_sensor.h
ESC/Firmware/Interfaces/Transport/: i_comm.h
ESC/Firmware/Interfaces/Utilities/: i_fastloop.h  i_periodic_loop.h  i_time.h  i_time_oneshot.h  utilities.h
ESC/Firmware/Services/: CMakeLists.txt
ESC/Firmware/Services/API/: bemf_monitor.h  frame_handler.h  service_bemf_monitor.h  service_bldc_motor.h  service_dc_motor.h  service_frame_handler.h  service_generic.h  service_loop.h  service_pid.h  services.h
ESC/Firmware/Services/Algorithm/: service_pid.c
ESC/Firmware/Services/Computation/: bemf_monitor.c  bldc_motor copy.c  bldc_motor.c  dc_motor.c
ESC/Firmware/Services/Display/: PCTerminal.c
ESC/Firmware/Services/Loops/: service_fastloop.c  service_lowloop.c
ESC/Firmware/Services/Measurement/: service_current.c  service_temperature.c  service_time.c  service_voltage.c
ESC/Firmware/Services/Protocol/Debug/: frame_handler_debug.c  protocol_debug.c
ESC/Firmware/Services/SSystem/: services_system.c
ESC/Firmware/Services/Tools/: conversion.c
ESC/Firmware/Services/Try/: service_blink_led.c  service_release_comm_test.c
ESC/Firmware/Tests/: CMakeLists.txt
ESC/Firmware/Tests/Hil/: test_inverter_hil.c  test_loops_hil.c  test_tim_hil.c  test_uart_hil.c
ESC/Linker/: STM32G473CCTX_FLASH.ld
